deploy: FreieBildung/Organisationsentwicklung@4961c2ad7f8b197f16361108fe30aba61b42a8c7

--- a/css/zoom.css
+++ b/css/zoom.css
@@ -18,3 +18,8 @@
 :root {
 	--content-max-width: 88%!important;
 }
+
+/* Hintergrund für Camunda Viewer */
+#js-canvas { 
+    background-color: #eeeeee; 
+}
